# ai_core

./: .coverage  .gitignore  coverage.xml  mypy.ini  pyproject.toml  run_tests.sh
ai_core/adapter/: download_adapters.py
ai_core/api/: request_models.py  response_models.py
ai_core/app/: ai_router.py  main.py
ai_core/data_access/: ai_model_repository.py  db_transaction.py  hf_llm_db_repository.py  hf_llm_file_repository.py  llm_db_repository.py  repository_base.py  unit_of_work.py
ai_core/database/: connection.py  orm_models.py
ai_core/dependencies/: ai_model_dependency.py
ai_core/dto/: ai_model_dto.py
ai_core/service/: download_ai_model_service.py
ai_core/utils/: ai_core_exception.py  ai_model_utils.py  app_config.py  llm_core_exception.py  logging_decorators.py
alembic/: env.py
llm_core/api/: request_models.py  response_models.py
llm_core/app/: llm_router.py  llms.py  main.py
llm_core/data_access/: llm_repository.py
llm_core/dependencies/: llm_dependency.py
llm_core/service/: download_llm_service.py
llm_core/utils/: config.py
stubs/: transformers.pyi
test/adapter/: download_adapters_test.py
test/app/: ai_router_test.py  llm_router_test.py
test/data_access/: llm_db_repository_test.py  unit_of_work_test.py
test/database/: orm_models_test.py
test/service/: download_ai_model_service_test.py  download_llm_service_test.py
