[tool.poetry]
name = "llm_core"
version = "0.1.0"
description = ""
authors = ["Tianchen Zheng <eric.tc.zheng@gmail.com>"]
readme = "README.md"
packages = [
    { include = "llm_core" }
]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.0"
transformers = "^4.40.1"
sqlalchemy = "^2.0.29"
python-dotenv = "^1.0.1"
fastapi = "^0.110.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
